# RustyLife

./: Cargo.toml  LICENSE  README.md
src/: game_of_life.rs  main.rs  rusty_life.rs
src/game_of_life/: grid.rs  grid_alternative.rs  render.rs
src/rusty_life/: file_reader.rs  grid.rs  input.rs  render.rs  view.rs
