[package]
name = "game_of_life_rust"
version = "0.1.0"
authors = ["StanEpp"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml="0.15.1"
rand="0.3.14"
rodio="0.9.0"
bit-vec="0.6.1"
rayon="1.3.0"
crossbeam-channel = "0.4.0"