[package]
name = "rusty_life"
version = "0.1.0"
authors = ["StanEpp"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.3.14"
rayon = "1.3.0"
sdl2 = "0.33.0"
gl = "0.14.0"
nalgebra = "0.20"
crossterm = "0.17.3"